# -agent-rag-eval-platform-

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/eval/: sample_eval.jsonl
data/sample_corpus/: architecture.md  evaluation.md  operations.md
k8s/: deployment.yaml
src/rag_platform/: chunking.py  cli.py  config.py  evaluation.py  generation.py  ingestion.py  main.py  retrieval.py  schemas.py  service.py  storage.py
tests/: test_evaluation.py  test_ingestion.py  test_query.py
