[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-rag-eval-platform"
version = "0.1.0"
description = "Production-minded RAG ingestion, retrieval, generation, and evaluation platform."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Ali" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "ruff>=0.3"
]

[project.scripts]
rag-platform = "rag_platform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
